# qt-opencv-pong

./: CMakeLists.txt  Dockerfile  README.md  run.sh  run_tests.sh
.github/workflows/: build-and-release-linux.yml  build-and-release.yml  build-and-test.yml
resources/: CameraPingPong.desktop
src/: main.cpp
src/app/: App.h  QtApp.h
src/builder/: GameBuilder.cpp  GameBuilder.h  GameContext.h
src/camera/: Camera.h  OpenCVCamera.cpp  OpenCVCamera.h
src/detector/: HandDetector.h  OpenCVHandDetector.cpp  OpenCVHandDetector.h
src/dto/: Frame.h  Rect.h  Screen.h
src/game/: CameraPongGame.cpp  CameraPongGame.h  DefaultGameLogic.cpp  DefaultGameLogic.h  GameBuilder.cpp  GameContext.h  GameLogic.h  GameState.h
src/game/component/: CameraInput.h  Collider.h  Component.h  Position.h  Velocity.h
src/game/controller/: BallController.h  PaddleController.h
src/game/entity/: Ball.h  Collider.h  Entity.h  Paddle.h
src/game/input/: CameraPongGame.cpp  CameraPongGame.h
src/game/logic/: DefaultGameLogic.cpp  DefaultGameLogic.h  GameLogic.h
src/game/state/: GameState.h
src/game/system/: CameraInput.cpp  CameraInput.h  Collision.cpp  Collision.h  Movement.cpp  Movement.h
src/renderer/: QtRenderer.cpp  QtRenderer.h  Renderer.h
src/updater/: FrameUpdater.h  QtFrameUpdater.cpp  QtFrameUpdater.h
tests/: CMakeLists.txt  CollisionSystemTest.cpp
